Small game design changes

--- a/application/modules/sudoku/views/scripts/_partials/sudoku-controls.phtml
+++ b/application/modules/sudoku/views/scripts/_partials/sudoku-controls.phtml
@@ -1,31 +1,41 @@
-<div class="sudoku-numpad">
-    <table>
-        <?php /*
-            <tr>
-                <td colspan="3" class="close"><i class="icon-remove-circle"></i></td>
-            </tr>
-            */ ?>
-        <?php $number = 1; ?>
-        <?php for ($row = 1; $row <= 3; $row++): ?>
-            <tr>
-                <?php for ($col = 1; $col <= 3; $col++): ?>
-                    <td class="number enabled" data-number="<?php echo $number; ?>">
-                        <?php if ($number == 3): ?><?php endif; ?>
-                        <?php echo $number; ?>
-                    </td>
-                    <?php $number++; ?>
+<div class="sudoku-controls">
+    <div class="sudoku-controls-row">
+        <button class="mark-mode btn">Режим пометок</button>
+    </div>
+    <div class="sudoku-controls-row">
+        <div class="sudoku-numpad">
+            <table>
+                <?php /*
+                    <tr>
+                        <td colspan="3" class="close"><i class="icon-remove-circle"></i></td>
+                    </tr>
+                    */ ?>
+                <?php $number = 1; ?>
+                <?php for ($row = 1; $row <= 3; $row++): ?>
+                    <tr>
+                        <?php for ($col = 1; $col <= 3; $col++): ?>
+                            <td class="number enabled" data-number="<?php echo $number; ?>">
+                                <?php if ($number == 3): ?><?php endif; ?>
+                                <?php echo $number; ?>
+                            </td>
+                            <?php $number++; ?>
+                        <?php endfor; ?>
+                    </tr>
                 <?php endfor; ?>
-            </tr>
-        <?php endfor; ?>
-        <tr>
-            <td class="number clear" colspan="3" data-number="">пусто</td>
-        </tr>
-    </table>
-</div>
-
-<div class="additional-buttons">
-    <button class="undo-move btn btn-mini disabled" data-moves=""><i class="icon-chevron-left"></i> Отменить ход</button>
-    <button class="redo-move btn btn-mini disabled" data-moves=""><i class="icon-chevron-right"></i>Повторить ход</button>
-    <button class="check-field btn btn-mini">Проверить поле</button>
-    <button class="clear-field btn btn-mini btn-danger">Очистить поле</button>
+                <tr>
+                    <td class="number clear" colspan="3" data-number="">пусто</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <div class="sudoku-controls-row btn-group">
+        <button class="undo-move btn disabled" data-moves=""><i class="icon-chevron-left"></i> Undo</button>
+        <button class="redo-move btn disabled" data-moves="">Redo <i class="icon-chevron-right"></i></button>
+    </div>
+    <div class="sudoku-controls-row">
+        <button class="check-field btn">Проверить поле</button>
+    </div>
+    <div class="sudoku-controls-row">
+        <button class="clear-field btn btn-danger">Очистить поле</button>
+    </div>
 </div>
