--- a/application/modules/sudoku/views/scripts/_partials/sudoku-game.phtml
+++ b/application/modules/sudoku/views/scripts/_partials/sudoku-game.phtml
@@ -21,8 +21,10 @@ $sudoku = $this->sudoku;
 
     <?php echo $this->partial('_partials/sudoku-controls.phtml'); ?>
 
-    <div class="time">
-        Время игры: <div class="game-time">синхронизация...</div>
+    <div class="sudoku-game-info">
+        <div class="time">
+            Время игры: <div class="game-time">синхронизация...</div>
+        </div>
     </div>
 </div>
 
